--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
-.gradle
+########
+# Gradle
+########
+
+.gradle/
 /build/
 
 # Ignore Gradle GUI config
@@ -12,3 +16,13 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+
+###############
+# IntelliJ IDEA
+###############
+
+.idea/
+*.ipr
+*.iws
+*.iml
+out/
