Correct Travis config to upload coverage data on success

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: java
 
-script:
-  - ./gradlew check
-  - codecov
+install: true
+script: ./gradlew check
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
