--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 
 install: true
-script: ./gradlew check
+script: ./gradlew check jacocoTestReport
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
