--- a/build.gradle
+++ b/build.gradle
@@ -8,3 +8,12 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 apply from: 'dependencies.gradle'
+
+if(System.env.CI) {
+	jacocoTestReport {
+		reports {
+			xml.enabled true
+			html.enabled false
+		}
+	}
+}
