--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java-library'
 	id 'groovy'
 	id 'jacoco'
+	id "org.sonarqube" version "2.6"
 }
 
 sourceCompatibility = 1.8
@@ -10,6 +11,7 @@ targetCompatibility = 1.8
 apply from: 'dependencies.gradle'
 
 if(System.env.CI) {
+
 	jacocoTestReport {
 		reports {
 			xml.enabled true
