--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ jobs:
     if: "(type = push) AND (branch = master)"
     script: |
       GH_PROJECT_PATH=${TRAVIS_REPO_SLUG} ./gradlew release || exit $?
-      echo "${GITHUB_USER}\n${GITHUB_TOKEN}\n" | git push --tags origin master || exit $?
+      printf "${GITHUB_USER}\n${GITHUB_TOKEN}\n" | git push --tags origin master || exit $?
     deploy:
       provider: releases
       api_key: ${GITHUB_TOKEN}
