--- a/.travis.yml
+++ b/.travis.yml
@@ -19,14 +19,14 @@ jobs:
     if: "(type != push) AND (branch = master)"
     script: |
       GH_PROJECT_PATH=${TRAVIS_REPO_SLUG} ./gradlew -m release || exit $?
-      REPO_URL=$(git remot get-url origin) || exit $?
+      REPO_URL=$(git remote get-url origin) || exit $?
       git push -n --tags https://${GITHUB_TOKEN}:x-oauth-basic@${REPO_URL#https://} || exit $?
 
   - stage: deploy
     if: "(type = push) AND (branch = master)"
     script: |
       GH_PROJECT_PATH=${TRAVIS_REPO_SLUG} ./gradlew release || exit $?
-      REPO_URL=$(git remot get-url origin) || exit $?
+      REPO_URL=$(git remote get-url origin) || exit $?
       git push --tags https://${GITHUB_TOKEN}:x-oauth-basic@${REPO_URL#https://} || exit $?
     deploy:
       provider: releases
